; ModuleID = '/home/carl/AnghaBench/vlc/test/libvlc/extr_media_player.c_test_media_player_play_stop.c'
source_filename = "/home/carl/AnghaBench/vlc/test/libvlc/extr_media_player.c_test_media_player_play_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_default_sample = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [30 x i8] c"Testing play and pause of %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**, i32)* @test_media_player_play_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_media_player_play_stop(i8** %0, i32 %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store i8** %0, i8*** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i8*, i8** @test_default_sample, align 8
  store i8* %9, i8** %8, align 8
  %10 = load i8*, i8** %8, align 8
  %11 = call i32 @test_log(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i8* %10)
  %12 = load i32, i32* %4, align 4
  %13 = load i8**, i8*** %3, align 8
  %14 = call i32* @libvlc_new(i32 %12, i8** %13)
  store i32* %14, i32** %5, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = icmp ne i32* %15, null
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert(i32 %17)
  %19 = load i32*, i32** %5, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = call i32* @libvlc_media_new_path(i32* %19, i8* %20)
  store i32* %21, i32** %6, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = icmp ne i32* %22, null
  %24 = zext i1 %23 to i32
  %25 = call i32 @assert(i32 %24)
  %26 = load i32*, i32** %6, align 8
  %27 = call i32* @libvlc_media_player_new_from_media(i32* %26)
  store i32* %27, i32** %7, align 8
  %28 = load i32*, i32** %7, align 8
  %29 = icmp ne i32* %28, null
  %30 = zext i1 %29 to i32
  %31 = call i32 @assert(i32 %30)
  %32 = load i32*, i32** %6, align 8
  %33 = call i32 @libvlc_media_release(i32* %32)
  %34 = load i32*, i32** %7, align 8
  %35 = call i32 @play_and_wait(i32* %34)
  %36 = load i32*, i32** %7, align 8
  %37 = call i32 @libvlc_media_player_stop_async(i32* %36)
  %38 = load i32*, i32** %7, align 8
  %39 = call i32 @libvlc_media_player_release(i32* %38)
  %40 = load i32*, i32** %5, align 8
  %41 = call i32 @libvlc_release(i32* %40)
  ret void
}

declare dso_local i32 @test_log(i8*, i8*) #1

declare dso_local i32* @libvlc_new(i32, i8**) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @libvlc_media_new_path(i32*, i8*) #1

declare dso_local i32* @libvlc_media_player_new_from_media(i32*) #1

declare dso_local i32 @libvlc_media_release(i32*) #1

declare dso_local i32 @play_and_wait(i32*) #1

declare dso_local i32 @libvlc_media_player_stop_async(i32*) #1

declare dso_local i32 @libvlc_media_player_release(i32*) #1

declare dso_local i32 @libvlc_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
